# mediCore

./: .env  Dockerfile  docker-compose.prod.yml  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  startup.sh
accounts/: serializers.py  views.py
analysis/: models.py  serializers.py  tests.py  views.py
analysis/migrations/: 0001_initial.py
core/: errors.py  exceptions.py  pagination.py  renderers.py
data_templates/: apps.py  models.py  serializers.py  tests.py  views.py
data_templates/migrations/: 0001_initial.py
database/: 1.sql  init.sql
frontend/src/api/: request.ts  services.ts
frontend/src/router/: index.ts
frontend/src/types/: api.ts
mediCore/: asgi.py  settings.py  urls.py  wsgi.py
patients/: admin.py  models.py  serializers.py  views.py
patients/migrations/: 0001_initial.py
records/: models.py  serializers.py  views.py
records/migrations/: 0001_initial.py
test/: MediCoreCollection.json  MediCoreTest.json  data_template_collection.json
utils/: snowflake.py
